# QoreDB

./: .gitignore  .prettierignore  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.agent/rules/: architecture.md  co-founder.md  code-rule.md  communication.md  general-rules.md  open-source.md  product-rules.md  security.md  ux.md
doc/: DESIGN_SYSTEM.md  PROJECT.md  QoreDB.md  TESTING_SSH.md  VISUAL_FOUNDATION.md
doc/todos/: poc.md  quality-9-10.md  v1.md
qoreqb/src-tauri/: Cargo.toml
qoreqb/src-tauri/src/: main.rs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  observability.rs  policy.rs
src-tauri/src/commands/: connection.rs  mod.rs  mutation.rs  policy.rs  query.rs  vault.rs
src-tauri/src/engine/: mod.rs  query_manager.rs  registry.rs  session_manager.rs  sql_safety.rs  ssh_tunnel.rs  traits.rs  types.rs
src-tauri/src/engine/drivers/: mongodb.rs  mysql.rs  postgres.rs
src-tauri/src/vault/: credentials.rs  lock.rs  mod.rs  storage.rs
src/components/Browser/: DatabaseBrowser.tsx  RowModal.tsx  TableBrowser.tsx
src/components/Connection/: ConnectionMenu.tsx  ConnectionModal.css  ConnectionModal.tsx  useConnectionActions.ts
src/components/Editor/: DocumentEditorModal.tsx  MongoEditor.css  MongoEditor.tsx  SQLEditor.tsx
src/hooks/: useSchemaCache.ts  useTheme.ts
src/lib/: drivers.ts  environment.ts  history.ts  tauri.ts
src/locales/: en.json  fr.json
(+30 files in other folders)
