[package]
name = "qoredb"
version = "0.1.0"
description = "Next gen DB Client"
authors = ["Raphaël Plassart <raphael.plassart@protonmail.com>"]
edition = "2021"

[lib]
name = "qoredb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "chrono", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde"] }
mongodb = "3"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
futures = "0.3"
sqlparser = "0.60"

# Note: SSH tunneling uses native OpenSSH command (ssh -L), no external crate needed

# Security - credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
argon2 = "0.5"
rand = "0.8"
